fixing bug 74129 r=shaver sr=blizzard